LK 103 add ter first layer *add button to select ter local layer *add ter trip drawing

--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
     <script src="scripts/initDisplay.js"></script>
     <!-- script to connect to firebase -->
     <script src="scripts/connectFirebase.js"></script>
+    <script src="scripts/displayLocalTrain.js"></script>
     <script src="scripts/weather.js"></script>
     <!-- script to init leaflet map -->
     <script src="scripts/barLayer.js"></script>
