LK? : Add global SNCF API request when the Toggle is checked Add indirect function (can display on map)

--- a/pages/side-nav.html
+++ b/pages/side-nav.html
@@ -73,6 +73,17 @@
                 });
             </script>
             <div class="input-group-btn">
+                <label class="mr-sm-2">Direct train ?</label>
+                <div class="btn-group-toggle btn-block" data-toggle="buttons" id="trip_buttons">
+                    <label class="btn btn-outline-secondary text-white">
+                        <input type="radio" name="trip" id="direct" autocomplete="off"> Direct
+                    </label>
+                    <label class="btn btn-outline-secondary text-white">
+                        <input type="radio" name="trip" id="indirect" autocomplete="off"> Indirect
+                    </label>
+                </div>
+            </div>
+            <div class="input-group-btn">
                 <label class="mr-sm-2">Duration</label>
                 <div class="btn-group-toggle btn-block" data-toggle="buttons" id="trip_buttons">
                     <label class="btn btn-outline-secondary text-white">
