LK Reorganize trip display organization

--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
     <!-- script to init leaflet map -->
     <script src="scripts/barLayer.js"></script>
     <script src="scripts/initMap.js"></script>
+    <script src="scripts/provideTrain.js"></script>
     <script defer src="scripts/generalMap.js"></script>
 </body>
 
