LKBite : Buttons Direct/Indirect working.

--- a/pages/side-nav.html
+++ b/pages/side-nav.html
@@ -74,12 +74,12 @@
             </script>
             <div class="input-group-btn">
                 <label class="mr-sm-2">Direct train ?</label>
-                <div class="btn-group-toggle btn-block" data-toggle="buttons" id="trip_buttons">
-                    <label class="btn btn-outline-secondary text-white">
-                        <input type="radio" name="trip" id="direct" autocomplete="off"> Direct
+                <div class="btn-group-toggle btn-block" data-toggle="buttons" id="trip_type">
+                    <label class="btn btn-outline-secondary active text-white">
+                        <input type="radio" name="trip_type" id="direct" autocomplete="off" checked> Direct
                     </label>
                     <label class="btn btn-outline-secondary text-white">
-                        <input type="radio" name="trip" id="indirect" autocomplete="off"> Indirect
+                        <input type="radio" name="trip_type" id="indirect" autocomplete="off"> Indirect
                     </label>
                 </div>
             </div>
