LKBite : Buttons Trip time restriction working on direct/indirect

--- a/pages/side-nav.html
+++ b/pages/side-nav.html
@@ -84,36 +84,33 @@
                 </div>
             </div>
             <div class="input-group-btn">
-                <label class="mr-sm-2">Duration</label>
-                <div class="btn-group-toggle btn-block" data-toggle="buttons" id="trip_buttons">
+                <label class="mr-sm-2">Durée du voyage</label>
+                <div class="btn-group-toggle btn-block" data-toggle="buttons" id="time_buttons">
                     <label class="btn btn-outline-secondary text-white">
-                        <input type="radio" name="trip" id="short" autocomplete="off"> < 1H
+                        <input type="radio" name="trip" id="120" autocomplete="off"> < 2H
                     </label>
                     <label class="btn btn-outline-secondary text-white">
-                        <input type="radio" name="trip" id="medium" autocomplete="off"> 1-3H
-                    </label>
-                    <label class="btn btn-outline-secondary text-white">
-                        <input type="radio" name="trip" id="long" autocomplete="off"> 4H+
+                        <input type="radio" name="trip" id="240" autocomplete="off"> 2-4H
                     </label>
                     <label class="btn btn-outline-secondary active text-white">
-                        <input type="radio" name="trip" id="unknown_trip" autocomplete="off" checked> ?
+                        <input type="radio" name="trip" id="unknown_trip" autocomplete="off" checked> 4H+
                     </label>
                 </div>
             </div>
             <div class="input-group-btn">
-                <label class="mr-sm-2">How long ?</label>
+                <label class="mr-sm-2">One day trip ?</label>
                 <div class="btn-group-toggle btn-block" data-toggle="buttons" id="time_buttons">
-                    <label class="btn btn-outline-secondary text-white">
-                        <input type="radio" name="time" id="6h" autocomplete="off"> < 6H
-                    </label>
-                    <label class="btn btn-outline-secondary text-white">
-                        <input type="radio" name="time" id="12h" autocomplete="off"> < 12H
-                    </label>
-                    <label class="btn btn-outline-secondary text-white">
-                        <input type="radio" name="time" id="24h" autocomplete="off"> < 24H
-                    </label>
                     <label class="btn btn-outline-secondary active text-white">
-                        <input type="radio" name="time" id="unknown_time" autocomplete="off" checked> ?
+                        <input type="radio" name="time" id="unknown_time" autocomplete="off" checked> One way
+                    </label>
+                    <label class="btn btn-outline-secondary text-white">
+                        <input type="radio" name="time" id="2h" autocomplete="off"> 2h
+                    </label>
+                    <label class="btn btn-outline-secondary text-white">
+                        <input type="radio" name="time" id="4h" autocomplete="off"> 4h
+                    </label>
+                    <label class="btn btn-outline-secondary text-white">
+                        <input type="radio" name="time" id="6h" autocomplete="off"> 6h
                     </label>
                 </div>
             </div>
