--- a/pages/side-nav.html
+++ b/pages/side-nav.html
@@ -87,6 +87,8 @@
                     </label>
                 </div>
             </div>
+
+            </div>
             <div class="form-group">
                 <label class="mr-sm-2">Departure</label>
                 <select class="form-control" id="destination_select">
@@ -94,6 +96,7 @@
                 </select>
             </div>
         </form>
+
     </ul>
 
 </nav>
