--- a/pages/side-nav.html
+++ b/pages/side-nav.html
@@ -7,21 +7,6 @@
         <strong>LK</strong>
     </div>
 
-    <ul class="list-unstyled components">
-        <li class="active">
-            <a href="index.html">
-                <i class="fas fa-home"></i>
-                Accueil
-            </a>
-        </li>
-        <li class="active">
-            <a href="index.html">
-                <i class="fas fa-suitcase"></i>
-                Contact
-            </a>
-        </li>
-    </ul>
-
 
     <ul class="list-unstyled CTAs">
         <div class="form-group">
@@ -59,7 +44,10 @@
                 };
                 $(function () {
                     //set up current date
-                    $('#selected_date').val((new Date().yyyymmdd()));
+                    let today = new Date()
+                    let tomorrow = new Date(today)
+                    tomorrow.setDate(tomorrow.getDate() + 1)
+                    $('#selected_date').val((tomorrow.yyyymmdd()));
                 });
             </script>
             <div class="input-group-btn">
@@ -76,7 +64,7 @@
                     </label>
                 </div>
             </div>
-            <div class="input-group-btn">
+            <div class="input-group-btn" id="trip_type_box">
                 <label class="mr-sm-2">Challenge</label>
                 <div class="btn-group-toggle btn-block" data-toggle="buttons" id="trip_type">
                     <label class="btn btn-outline-secondary active text-white">
@@ -88,6 +76,38 @@
                 </div>
             </div>
 
+            <div class="input-group-btn" id="journey_type">
+                <label class="mr-sm-2">Return</label>
+                <div class="btn-group-toggle btn-block" data-toggle="buttons" id="journey_type">
+                    <label class="btn btn-outline-secondary active text-white">
+                        <input type="radio" name="journey_type" id="no_return" autocomplete="off" checked>
+                        <i class="fas fa-times-circle"></i>
+                    </label>
+                    <label class="btn btn-outline-secondary text-white">
+                        <input type="radio" name="journey_type" id="one_day" autocomplete="off">1 Day
+                    </label>
+                    <label class="btn btn-outline-secondary text-white">
+                        <input type="radio" name="journey_type" id="specific_date" autocomplete="off">Date
+                    </label>
+                </div>
+                <div id="one_day_form">
+                        <div class="input-group-btn">
+                        <div class="btn-group-toggle btn-block" data-toggle="buttons" id="one_day_options">
+                            <label class="btn btn-outline-secondary active text-white">
+                                <input type="radio" name="oneday_type" id="short_journey" autocomplete="off" checked>+2H
+                            </label>
+                            <label class="btn btn-outline-secondary text-white">
+                                <input type="radio" name="oneday_type" id="medium_journey" autocomplete="off">+4H
+                            </label>
+                            <label class="btn btn-outline-secondary text-white">
+                                <input type="radio" name="oneday_type" id="long_journey" autocomplete="off">+6H
+                            </label>
+                        </div>
+                        </div>
+                    </div>
+                    <div id="specific_return_form">
+                        <div><input class="form-control" type="date" value="" id="return_date"></div>
+                    </div>
             </div>
             <div class="form-group">
                 <label class="mr-sm-2">Departure</label>
@@ -95,10 +115,34 @@
                     <option disabled selected>Departure...</option>
                 </select>
             </div>
+
         </form>
 
     </ul>
-
+    <script>
+                    $(function() {
+                    if($('#no_return').prop('checked')){
+                            $('#one_day_form').fadeOut(500);
+                            $('#specific_return_form').fadeOut(500);
+                        };
+                    $('#journey_type').change(function() {
+                        if($('#no_return').prop('checked')){
+                            $('#trip_type_box').fadeIn(500);
+                            $('#one_day_form').fadeOut(500);
+                            $('#specific_return_form').fadeOut(500);
+                        }else{
+                        if($('#one_day').prop('checked')){
+                            $('#trip_type_box').fadeOut(500);
+                            $('#one_day_form').fadeIn(500);
+                            $('#specific_return_form').fadeOut(500);
+                        }else{
+                            $('#trip_type_box').fadeIn(500);
+                            $('#specific_return_form').fadeIn(500);
+                            $('#one_day_form').fadeOut(500);
+                        }}
+                    })
+                    })
+        </script>
 </nav>
 
 </html>
